# azure-iot-gateway-sdk

modules/: CMakeLists.txt
modules/azure_functions/tests/azure_functions_ut/: azure_functions_ut.c
modules/bcm2835_gpio/: CMakeLists.txt  README.md  azure_tts.py  gpio.json
modules/bcm2835_gpio/inc/: bcm2835_gpio.h  bcm2835_gpio_hl.h  bcm2835_hw.h
modules/bcm2835_gpio/src/: bcm2835_gpio.c  bcm2835_gpio_hl.c  bcm2835_hw.c
modules/ble/tests/ble_ut/: ble_ut_linux.cpp
modules/rabbitmq/: CMakeLists.txt  rabbitmq.json
modules/rabbitmq/inc/: rabbitmq.h  rabbitmq_hl.h
modules/rabbitmq/src/: rabbitmq.c  rabbitmq_hl.c
